feat: add accessibility assessment page & replace user stories placeholder

--- a/work_phase_2/accessibility_assessment.html
+++ b/work_phase_2/accessibility_assessment.html
@@ -43,6 +43,37 @@
                     this, I will create one navigation bar, and use it for every page I created.
                 </p>
             </div>
+            <div class="assessment-card">
+                <h3>2. Consistent Identification (Level AA)</h3>
+                <h4>Success Criteria:</h4>
+                <p>
+                    Part of the websites that have the same function within the website must be identified in the same
+                    way.
+                </p>
+                <h4>Implementation on my website:</h4>
+                <p>
+                    I will use the same color scheme and UI components for the same type of content, for example
+                    using the same color for all the headings and the same colors/shapes for all the buttons.
+                    Furtheremore,
+                    I believe some features such as thread/timeline will be usable in many places, and applying
+                    this consistent identification will make the app easier for the user to use, and also make the
+                    development faster too since I dont have to make the same things twice.
+                </p>
+            </div>
+            <div class="assessment-card">
+                <h3>3. Contrast (Minimum) (Level AA)</h3>
+                <h4>Success Criteria:</h4>
+                <p>
+                    The UI within the application should have a certain level of contrast compared to the background.
+                </p>
+                <h4>Implementation on my website:</h4>
+                <p>
+                    I will create a proper color scheme that has a good contrast ratio between the colors. Furtheremore,
+                    I will make sure the usage of this color scheme is appropriate too, by creating UI components that
+                    follow this color scheme. Therefore the rest of the app will all have good contrast ratio, as long
+                    it use the UI components.
+                </p>
+            </div>
         </section>
     </div>
     <script type="module" src='js/accessibility_assessment.js'></script>
