--- a/work_phase_2/user_stories.html
+++ b/work_phase_2/user_stories.html
@@ -35,7 +35,7 @@
                 <p>
                     Act as Mike, a 25-year-old student from Indonesia who recently moved to Australia. He speaks
                     conversational English but are somewhat limited. <span class="interactive-highlight-stories"
-                        data-card="As a new international student, I want to easily discover local communities and cultural groups, so that I can build social connections and feel less isolated in my new country">He
+                        data-card="As an international student who enjoys eating, I would like suggestions for real regional cuisine and where to get it so that I can learn about Australian culture through food.">He
                         is looking for a website that know more about
                         communities in Australia </span>. He also likes food and want to try various autralian foods.
                 </p>
@@ -106,7 +106,7 @@
                     home" - YouTube is very good because I can see exactly how to do it, not just read words. Sometimes
                     the English in recipe websites is too difficult for me, but with video I can understand better.
                     <span class="interactive-highlight-stories"
-                        data-card="As a food-loving international student, I want recommendations for authentic local foods and where to find them, so that I can experience Australian culture through cuisine.">
+                        data-card="As an international student who enjoys eating, I would like suggestions for real regional cuisine and where to get it so that I can learn about Australian culture through food.">
                         I also use Google, but I type simple words like "Australian food recipe easy" or "pavlova recipe
                         beginner". Sometimes I find good websites, but some recipes use ingredients I don't know - like
                         what
@@ -136,7 +136,7 @@
                     opinions about this!
                     First,
                     <span class="interactive-highlight-stories"
-                        data-card="As a non-native English speaker, I want information presented in simple, clear language with visual aids, so that I can understand and navigate resources without language barriers.">
+                        data-card="As a non-native English speaker, I want information to be presented in simple, understandable language with visual aids so that I can use resources and understand them without any language barriers.">
                         simple language is most important for me. When website use very complicated words or long
                         sentences, I get confused and sometimes just close the website. I like when they use everyday
                         words
@@ -168,7 +168,7 @@
                 <h4>Response:</h4>
                 <p>
                     <span class="interactive-highlight-stories"
-                        data-card="As someone from a less-represented culture, I want accessible platforms to share my cultural knowledge and traditions, so that I can contribute to cultural exchange and help others understand my background.">
+                        data-card="Being from a less well-represented culture, I want easily accessible venues to share my customs and cultural knowledge in order to promote cross-cultural dialogue and aid in understanding my heritage.">
                         Oh, this is something I think about a lot! I really want to share about Indonesian culture
                         because
                         many Australian people don't know much about Indonesia, even though we are neighbors!
@@ -280,7 +280,7 @@
                     reliable way?
                     I try to search on internet for "Australian festivals" or "traditional events Melbourne" - I live in
                     Melbourne - but websites are very confusing for me.
-                    <span class="interactive-highlight-stories" data-card="As a visually impaired person interested in Australian culture, I want event information presented in accessible formats with audio descriptions and screen reader compatibility, so that I can discover and participate in traditional cultural events.
+                    <span class="interactive-highlight-stories" data-card="I want event information to be presented in accessible formats with screen reader compatibility and audio descriptions so that, as a visually impaired person interested in Australian culture, I can learn about and take part in traditional cultural events.
 ">
                         They have calendar views that I cannot see well,
                         or small text with dates and times. Many times I find information after event already finish!
@@ -339,8 +339,8 @@
                     page, buttons disappear. This is very frustrating.
                     Colors are so important too! Dark text on light background is best for me. But many websites use
                     gray text on white, or white text on light colors - I cannot read this at all!
-                    <span class="interactive-highlight-stories"
-                        data-card="As someone with visual impairments, I want websites with high contrast design and proper screen reader compatibility, so that I can access cultural information independently without assistance.">
+                    <span class="interactive-highlight-stories" data-card="I need websites with high contrast designs and appropriate screen reader compatibility because I am visually impaired and need to be able to access cultural information on my own without help.
+">
                         High contrast is...
                         how do you say... essential?
                         I really need websites that work with screen reader. My phone has voice function that reads
@@ -475,7 +475,7 @@
                     there's always like fifty different menus and tabs and things. I just want to find what I need
                     quickly, not spend ages clicking through stuff.
                     <span class="interactive-highlight-stories"
-                        data-card="As a teenager comfortable with social media apps but not complex websites, I want educational platforms designed with large buttons, minimal text, and intuitive navigation similar to popular apps, so that I can focus on learning rather than struggling with the interface.">
+                        data-card="I want educational platforms to be designed with big buttons, little text, and easy navigation like popular apps so that I can concentrate on learning rather than fumbling with the interface. I'm a teenager who is comfortable with social media apps but not complicated websites.">
                         Banking apps are the worst though. Mum made me download the CommBank app and it's so confusing -
                         like, why do I need to go through three different screens just to check my balance?
                         I guess what makes apps easy for me is when they're designed like... you know, like games
