fix: add pb on end of pages

--- a/work_phase_2/accessibility_assessment.html
+++ b/work_phase_2/accessibility_assessment.html
@@ -27,7 +27,7 @@
             <h2>Accessibility Assessment</h2>
         </header>
 
-        <section class="m-t-6">
+        <section class="m-t-6 p-b-24">
             <div class="assessment-card">
                 <h3>1. Consistent Navigation (AA)</h3>
                 <h4>Success Criteria:</h4>
