--- a/work_phase_2/ethics_analysis.html
+++ b/work_phase_2/ethics_analysis.html
@@ -27,7 +27,7 @@
             <h2>Ethics Analysis</h2>
         </header>
 
-        <section class="m-t-6">
+        <section class="m-t-6 p-b-24">
             <div class="assessment-card">
                 <h3>Potential Harm 1: Lorem ipsum dolor sit amet.</h3>
 
