--- a/work_phase_2/user_stories.html
+++ b/work_phase_2/user_stories.html
@@ -27,7 +27,7 @@
             <h2>User Stories</h2>
         </header>
 
-        <section class="m-t-6">
+        <section class="m-t-6 p-b-24">
             <div class="assessment-card">
                 <h3>Interview 1: Mike</h3>
 
@@ -339,8 +339,8 @@
                     page, buttons disappear. This is very frustrating.
                     Colors are so important too! Dark text on light background is best for me. But many websites use
                     gray text on white, or white text on light colors - I cannot read this at all!
-                    <span class="interactive-highlight-stories" data-card="I need websites with high contrast designs and appropriate screen reader compatibility because I am visually impaired and need to be able to access cultural information on my own without help.
-">
+                    <span class="interactive-highlight-stories"
+                        data-card="I need websites with high contrast designs and appropriate screen reader compatibility because I am visually impaired and need to be able to access cultural information on my own without help.">
                         High contrast is...
                         how do you say... essential?
                         I really need websites that work with screen reader. My phone has voice function that reads
