feat: ethics analysis

--- a/work_phase_2/ethics_analysis.html
+++ b/work_phase_2/ethics_analysis.html
@@ -29,31 +29,119 @@
 
         <section class="m-t-6 p-b-24">
             <div class="assessment-card">
-                <h3>Potential Harm 1: Lorem ipsum dolor sit amet.</h3>
+                <h3>Ethical Risk 1: User data collection on the Newsletter Subscription Feature</h3>
 
                 <h4>ACS Value:</h4>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor
-                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
-                    nostrud exercitation ullamco laboris.
+                    Honesty
                 </p>
 
-                <h4>Specific Principle:</h4>
+                <h4>Rationale:</h4>
                 <p>
-                    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore
-                    eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt
-                    in culpa qui officia deserunt mollit anim id est laborum.
+                    "You will be honest in your representation of skills, knowledge, services and products."
+
+                    <br />
+                    <br />
+
+
+                    Due to the functional requirement of this website that states the usage of a newsletter subscription
+                    feature that requires user data input, several precautions must be made regarding the act of
+                    collecting, managing, and sharing these personal data.
                 </p>
 
                 <div class="solution">
                     <h4>Solution:</h4>
                     <p>
-                        Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
-                        doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore
-                        veritatis et quasi architecto beatae vitae dicta sunt explicabo.
+                        One of the solution in order to overcome this is to be as transparent to the user as possible.
+                        Honesty and transparency to the user regarding data collection and management should be
+                        mandatory,
+                        This could be done by using several steps, including showing a clear and honest terms and
+                        conditions,
+                        having a feature to delete the user's own data, including their accounts, always shows
+                        prompts
+                        before any data collection activity occur, and make sure the website is still fully
+                        functional
+                        even in case the user do not intend to gave their permission for personal data collections.
+
+
                     </p>
                 </div>
             </div>
+            <div class="assessment-card">
+                <h3>Ethical Risk 2: Conflict of Interest for certain group</h3>
+
+                <h4>ACS Value:</h4>
+                <p>
+                    The Primacy of the Public Interest
+                </p>
+
+                <h4>Rationale:</h4>
+                <p>
+                    "You will place the interests of the public above those of personal, business or
+                    sectional interests."
+                    <br />
+                    <br />
+                    Because the website created will host various cultures accross Australia, there will be risk of
+                    giving
+                    a certain preference to a certain groups, especially those who might have some commercial value.
+                    This can lead to
+                    bias in how each cultures represented.
+                </p>
+
+                <div class="solution">
+                    <h4>Solution:</h4>
+                    <p>
+                        The website created will have to keep fair representation, without any bias, and guarantee all
+                        group of people and culture receive an equal chance and treatment, regardless of any economic
+                        interests
+                        or any other biases. In order to do this, a community representative should always be given the
+                        chance
+                        to advocate any mistreatment to the project's stakeholder. Furtheremore, a transparent
+                        decision-making for
+                        any changes created later down the road should be made mandatory, to maintain the website's
+                        integrity by
+                        preventing any potential public distrust from the users.
+                    </p>
+                </div>
+            </div>
+            <div class="assessment-card">
+                <h3>Ethical Risk 3: Social Harms such as Profanity, Online Harassment, and Disinformation</h3>
+
+                <h4>ACS Value:</h4>
+                <p>
+                    The Enhancement of Quality of Life
+                </p>
+
+                <h4>Rationale:</h4>
+                <p>
+                    "You will strive to enhance the quality of life of those affected by your work."
+                    <br />
+                    <br />
+                    The risk of social harm will always exist in an social-media like softwares, as the website itself
+                    will
+                    encourage users to share their thoughts and ideas in any verbal communications. These expression,
+                    will also allow social harms, such as profanity and cyber bullying to occur in the website, and
+                    therefore
+                    risking the quality of life to those who affected.
+                </p>
+
+                <div class="solution">
+                    <h4>Solution:</h4>
+                    <p>
+                        A proper content moderation system will be have to made to make sure we can minimize any social
+                        harms.
+                        Features such as community notes that is implemented in X (twitter) could also be implemented,
+                        so that
+                        human moderators trained in cultural sensitivity can assess any potential social harms
+                        transparently.
+                        Furthermore, a regular communication between the community and the stakeholder of this project
+                        can also
+                        help to speed up the feedback-improvement loop regarding any feature neccesarry to minimize
+                        social harms.
+                    </p>
+                </div>
+            </div>
+
         </section>
     </div>
     <script type="module" src='js/ethics_analysis.js'></script>
