--- a/work_phase_2/index.html
+++ b/work_phase_2/index.html
@@ -29,9 +29,8 @@
         <section class="assessment-card m-t-6">
             <h3>What's in this website?</h3>
             <p>
-                This is the second phase of my work. I will be completing A2
-                Design Research during this page. But all of that assessment
-                will be created as pages in this website.
+                This is the home page for my second work phase, all of the pages that are part of this work phase
+                can be accessed through the navbar above.
             </p>
         </section>
     </div>
