feat: ai acknowledgement

--- a/work_phase_2/genai_mt_acknowledgement.html
+++ b/work_phase_2/genai_mt_acknowledgement.html
@@ -31,7 +31,55 @@
             <div class="assessment-card">
                 <h3>1. Overview of Usage</h3>
 
-                <h4>AI Tools Usage Summary:</h4>
+                <h4 class="p-b-2">AI Tools Usage Summary:</h4>
+
+                <h4>Tools: Claude</h4>
+                <p>Use or Purpose: To conduct a mock interview with 3 potential clients, to gather user stories and
+                    create the user needs</p>
+                <p>Prompt: "Act as Mike, a 25-year-old student from Indonesia who recently moved to Australia. He speaks
+                    conversational English but are somewhat limited. He
+                    is looking for a website that know more about
+                    communities in Australia . He also likes food and want to try various autralian foods." (and other
+                    similiar prompts)</p>
+                <div class="warning">
+                    <p>The answers provided in User Stories Pages are entirely AI generated.</p>
+                </div>
+                <h5 class="p-t-2">Date: 3 & 8 September</h5>
+
+
+                <h4 class="divider"></h4>
+
+                <h4>Tools: Claude</h4>
+                <p>Use or Purpose: Improve existing navbar to look better on mobile</p>
+                <p>Prompt: "Based on my current navbar, do you have any suggestion on how to improve it on mobile? Since
+                    it's looks messy in the mobile right now"</p>
+                <div class="warning">
+                    <p>Mobile Navbar on components.css</p>
+                </div>
+                <h5 class="p-t-2">Date: 6 September</h5>
+
+                <h4 class="divider"></h4>
+
+                <h4>Tools: Quillbot</h4>
+                <p>Use or Purpose: Assess and improve my english sentences</p>
+                <p>Prompt: My ethics analysis and user stories (before it's fixed)</p>
+                <div class="warning">
+                    <p>Ethics Analysis and user stories</p>
+                </div>
+                <h5 class="p-t-2">Date: 9 August</h5>
+
+                <h4 class="divider"></h4>
+
+                <h4>Tools: Claude</h4>
+                <p>Use or Purpose: Improve the styling of my Card component</p>
+                <p>Prompt: "Based on the css styling for my existing card component, do you have any suggestions on how
+                    to improve it"</p>
+                <div class="warning">
+                    <p>Section Affected: assessment-card component in components.css is partly inspired by code from the
+                        AI</p>
+                </div>
+                <h5 class="p-t-2">Date: 3 & 9 September</h5>
+
             </div>
         </section>
 
