--- a/work_phase_2/user_stories.html
+++ b/work_phase_2/user_stories.html
@@ -34,10 +34,9 @@
                 <h4>Initial Prompt:</h4>
                 <p>
                     Act as Mike, a 25-year-old student from Indonesia who recently moved to Australia. He speaks
-                    conversational English but are somewhat limited. <span class="interactive-highlight-stories"
-                        data-card="As an international student who enjoys eating, I would like suggestions for real regional cuisine and where to get it so that I can learn about Australian culture through food.">He
-                        is looking for a website that know more about
-                        communities in Australia </span>. He also likes food and want to try various autralian foods.
+                    conversational English but are somewhat limited. He
+                    is looking for a website that know more about
+                    communities in Australia . He also likes food and want to try various autralian foods.
                 </p>
 
                 <h4>Follow-up Question:</h4>
