fix: add AI acknowledgement (reset & layout)

--- a/work_phase_2/genai_mt_acknowledgement.html
+++ b/work_phase_2/genai_mt_acknowledgement.html
@@ -80,6 +80,21 @@
                 </div>
                 <h5 class="p-t-2">Date: 3 & 9 September</h5>
 
+                <h4 class="divider"></h4>
+
+                <h4>Tools: Claude</h4>
+                <p>Use or Purpose: Create reset.css and layout.css files</p>
+                <p>Prompt: " want to create helper classes to help with spacing on my
+                    webpage. I want them for both margin and padding as well as
+                    options for top, bottom, start, end and x (start and end), and y (top
+                    and bottom). I also want to set the spacing using variables so I can
+                    adjust the spacing easily if needed. The format of the classes
+                    should be, for example, m-1, m-x-3, p-s-4, etc"</p>
+                <div class="warning">
+                    <p>Section Affected: layout.css and reset.css</p>
+                </div>
+                <h5 class="p-t-2">Date: 30 July</h5>
+
             </div>
         </section>
 
