feat: init work phase 3

--- a/work_phase_3/index.html
+++ b/work_phase_3/index.html
@@ -4,21 +4,15 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/reset.css" />
+    <link rel="stylesheet" href="css/base.css" />
+    <link rel="stylesheet" href="css/layout.css" />
+    <link rel="stylesheet" href="css/components.css" />
     <title>Work Phase 3</title>
 </head>
 
 <body>
-    <header>
-        <h1>Sam's Work Phase 3</h1>
-    </header>
-    <section>
-        <p>This page will show Sam's work phase 3</p>
-    </section>
-    <nav>
-        <nav>
-            <a href="../index.html">Home</a>
-        </nav>
-    </nav>
+
 </body>
 
 </html>
