--- a/work_phase_3/index.html
+++ b/work_phase_3/index.html
@@ -8,10 +8,21 @@
     <link rel="stylesheet" href="css/base.css" />
     <link rel="stylesheet" href="css/layout.css" />
     <link rel="stylesheet" href="css/components.css" />
+
+    <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+
     <title>Work Phase 3</title>
 </head>
 
 <body>
+    <!-- START PAGE STRUCTURE -->
+    <nav id="nav-mobile" aria-label="Mobile Navigation"></nav>
+    <nav id="nav-dekstop" aria-label="Dekstop Navigation"></nav>
+
+    <main>
+        <h1>WP3 Home Page</h1>
+    </main>
+
 
 </body>
 
