--- a/work_phase_3/site_map.html
+++ b/work_phase_3/site_map.html
@@ -16,13 +16,33 @@
 
 <body>
     <!-- START PAGE STRUCTURE -->
-    <nav id="nav-mobile" aria-label="Mobile Navigation"></nav>
-    <nav id="nav-dekstop" aria-label="Dekstop Navigation"></nav>
+    <nav id="nav-mobile" aria-label="Mobile Navigation">
+        <ul>
+            <li><a href="index.html"><span class="icon">🏚️</span></a></li>
+            <li><a href="site_map.html" aria-current="page"><span class="icon">🗺️</span></a></li>
+            <li><a href="style_guide.html"><span class="icon">🖼️</span></a></li>
+            <li><a href="ethical_response.html"><span class="icon">🧑‍💻</span></a></li>
+            <li><a href="genai_mt_acknowledgement.html"><span class="icon">💻</span></a></li>
+        </ul>
+    </nav>
+    <nav id="nav-dekstop" aria-label="Dekstop Navigation">
+        <ul>
+            <li><a href="index.html"><span class="icon">Home</span></a></li>
+            <li><a href="site_map.html" aria-current="page"><span class="icon">Site Map</span></a></li>
+            <li><a href="style_guide.html"><span class="icon">Style Guide</span></a></li>
+            <li><a href="ethical_response.html"><span class="icon">Ethical Response</span></a></li>
+            <li><a href="genai_mt_acknowledgement.html"><span class="icon">Gen AI</span></a></li>
+        </ul>
+    </nav>
 
     <main>
-        <h1>WP3 Home Page</h1>
+        <div class="container">
+            <h1>WP3 Home Page</h1>
+            <img src="assets/sitemap.png" alt="Image of my created sitemap" class="responsive-img" />
+        </div>
     </main>
 
+    <script src='js/site_map.js'></script>
 
 </body>
 
