feat: accordion functionalities

--- a/work_phase_3/site_map.html
+++ b/work_phase_3/site_map.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/base.css" />
     <link rel="stylesheet" href="css/layout.css" />
     <link rel="stylesheet" href="css/components.css" />
+    <link rel="stylesheet" href="css/page_css/site_map.css" />
 
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
 
@@ -39,10 +40,24 @@
         <div class="container">
             <h1>WP3 Home Page</h1>
             <img src="assets/sitemap.png" alt="Image of my created sitemap" class="responsive-img" />
+
+            <section class="accordion m-y-5 p-b-20">
+                <div class="accordion-item">
+                    <button class="accordion-header">▷Inspiration</button>
+                    <div class="accordion-content">
+                        <p class="m-y-3">
+                            Central hub for users to see and share inspiring content.
+                            Supports the client's goal of empowering users with knowledge and
+                            User story 'As a ...'. Note: this should be your content! These are your
+                            annotations (see L08 for details).
+                        </p>
+                    </div>
+                </div>
+            </section>
         </div>
     </main>
 
-    <script src='js/site_map.js'></script>
+    <script type="module" src='js/site_map.js'></script>
 
 </body>
 
