feat: add nested accordion

--- a/work_phase_3/site_map.html
+++ b/work_phase_3/site_map.html
@@ -42,15 +42,25 @@
             <img src="assets/sitemap.png" alt="Image of my created sitemap" class="responsive-img" />
 
             <section class="accordion m-y-5 p-b-20">
-                <div class="accordion-item">
-                    <button class="accordion-header">▷Inspiration</button>
+                <div class="accordion-item open">
+                    <button class="accordion-header">▷ Inspiration</button>
                     <div class="accordion-content">
                         <p class="m-y-3">
-                            Central hub for users to see and share inspiring content.
-                            Supports the client's goal of empowering users with knowledge and
-                            User story 'As a ...'. Note: this should be your content! These are your
-                            annotations (see L08 for details).
+                            Central hub for users to see and share inspiring content. Supports the client's goal of
+                            empowering users with knowledge and User story 'As a ...'.
+                            <span style="color: var(--secondary-color)">
+                                Note: this should be your content! These are your annotations (see L08 for details).
+                            </span>
                         </p>
+                        <div class="accordion nested">
+                            <div class="accordion-item">
+                                <button class="accordion-header">▷ Garden Showcase</button>
+                                <div class="accordion-content">
+                                    <p class="m-y-3">THIS SHOULD BE YOUR ANNOTATION FOR YOUR WEBSITE A
+                                        showcase of inspiring food gardens. Supports ...</p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </section>
