--- a/work_phase_3/visceral_design.html
+++ b/work_phase_3/visceral_design.html
@@ -8,22 +8,45 @@
     <link rel="stylesheet" href="css/base.css" />
     <link rel="stylesheet" href="css/layout.css" />
     <link rel="stylesheet" href="css/components.css" />
+    <link rel="stylesheet" href="css/page_css/visceral_design.css" />
 
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
 
-    <title>Work Phase 3</title>
+    <title>Visceral Design - Work Phase 3</title>
 </head>
 
 <body>
     <!-- START PAGE STRUCTURE -->
-    <nav id="nav-mobile" aria-label="Mobile Navigation"></nav>
-    <nav id="nav-dekstop" aria-label="Dekstop Navigation"></nav>
+    <nav id="nav-mobile" aria-label="Mobile Navigation">
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="site_map.html">Site Map</a></li>
+            <li><a href="style_guide.html">Guide</a></li>
+        </ul>
+    </nav>
+
+    <nav id="nav-dekstop" aria-label="Desktop Navigation">
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="visceral_design.html">Visceral</a></li>
+            <li><a href="behavioural_design.html">Behavioral</a></li>
+            <li><a href="reflective_design.html">Reflective</a></li>
+            <li><a href="site_map.html">Site Map</a></li>
+            <li><a href="style_guide.html">Style Guide</a></li>
+        </ul>
+    </nav>
 
     <main>
-        <h1>WP3 Home Page</h1>
+        <div class="container">
+            <header class="m-b-8">
+                <h1 class="m-b-4">Visceral Design</h1>
+                <h3 class="m-b-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, sit?</h3>
+                <p class="m-b-8">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo vel ipsam totam pariatur iusto
+                    molestiae reprehenderit id ad maiores deserunt.
+                </p>
+            </header>
     </main>
-
-
 </body>
 
 </html>
