--- a/work_phase_3/visceral_design.html
+++ b/work_phase_3/visceral_design.html
@@ -46,6 +46,59 @@
                     molestiae reprehenderit id ad maiores deserunt.
                 </p>
             </header>
+
+            <article class="design-section m-b-12">
+                <h2 class="m-b-6">Wireframe Gallery</h2>
+                <p class="m-b-8">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, sapiente ea id ipsam voluptatibus
+                    deleniti esse illum, aliquid a officia cum nulla corporis blanditiis labore aut! Eveniet cumque
+                    commodi esse!
+                </p>
+
+                <div class="image-gallery">
+                    <div class="gallery-item">
+                        <img src="https://via.placeholder.com/400x300/3498db/ffffff?text=Homepage+Layout"
+                            alt="lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, sapiente ea id ipsam voluptatibus"
+                            class="responsive-img">
+                        <h4 class="m-t-3">Lorem, ipsum dolor.</h4>
+                    </div>
+
+                    <div class="gallery-item">
+                        <img src="https://via.placeholder.com/400x300/e74c3c/ffffff?text=Mobile+Navigation"
+                            alt="lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, sapiente ea id ipsam voluptatibus"
+                            class="responsive-img">
+                        <h4 class="m-t-3">Lorem, ipsum dolor.</h4>
+                    </div>
+
+                    <div class="gallery-item">
+                        <img src="https://via.placeholder.com/400x300/2c3e50/ffffff?text=Content+Grid"
+                            alt="lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, sapiente ea id ipsam voluptatibus"
+                            class="responsive-img">
+                        <h4 class="m-t-3">Lorem, ipsum dolor.</h4>
+                    </div>
+
+                    <div class="gallery-item">
+                        <img src="https://via.placeholder.com/400x300/27ae60/ffffff?text=Form+Design"
+                            alt="lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, sapiente ea id ipsam voluptatibus"
+                            class="responsive-img">
+                        <h4 class="m-t-3">Lorem, ipsum dolor.</h4>
+                    </div>
+
+                    <div class="gallery-item">
+                        <img src="https://via.placeholder.com/400x300/9b59b6/ffffff?text=Typography+Scale"
+                            alt="lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, sapiente ea id ipsam voluptatibus"
+                            class="responsive-img">
+                        <h4 class="m-t-3">Lorem, ipsum dolor.</h4>
+                    </div>
+
+                    <div class="gallery-item">
+                        <img src="https://via.placeholder.com/400x300/f39c12/ffffff?text=Color+System"
+                            alt="lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, sapiente ea id ipsam voluptatibus"
+                            class="responsive-img">
+                        <h4 class="m-t-3">Lorem, ipsum dolor.</h4>
+                    </div>
+                </div>
+            </article>
     </main>
 </body>
 
